--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
 <!-- Write your HTML in this file -->
 
+<doctype>
+    <html>
+        <head>
+            <body>
+            </body>
+        </head>
+    </html>
+</doctype>
