--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!-- Write your HTML in this file -->
 
-<doctype>
-    <html>
+<!DOCTYPE html>
+    <html lang="en">
+        <!-- This is a comment! -->
         <head>
+            <link rel="stylesheet" type="text/css" href="style.css">
+            <title>Cat Perry's Favorite Cats</title>
+        </head>
             <body>
             </body>
-        </head>
     </html>
-</doctype>
